// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONNI help should be printed with --help 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: index [options]

Options:
  -v, --version                   output the version number
  -m --minify                     minify output
  -q --query <query>              query to transform data with
  --input <format>                input format. Available formats: json, tsv, csv
  --input-header <header>         input CSV/TSV headers. Separated with \\",\\"
  --input-delimiter <delimiter>   CSV/TSV input delimiter character. Defaults to \\",\\"
  --output <format>               output format. Available formats: json, tsv, csv
  --output-delimiter <delimiter>  CSV/TSV output delimiter character. Defaults to \\",\\"
  --indent <indent>               output indentation, defaults to \\"  \\"
  -h, --help                      output usage information
",
}
`;

exports[`JSONNI help should be printed with -h 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: index [options]

Options:
  -v, --version                   output the version number
  -m --minify                     minify output
  -q --query <query>              query to transform data with
  --input <format>                input format. Available formats: json, tsv, csv
  --input-header <header>         input CSV/TSV headers. Separated with \\",\\"
  --input-delimiter <delimiter>   CSV/TSV input delimiter character. Defaults to \\",\\"
  --output <format>               output format. Available formats: json, tsv, csv
  --output-delimiter <delimiter>  CSV/TSV output delimiter character. Defaults to \\",\\"
  --indent <indent>               output indentation, defaults to \\"  \\"
  -h, --help                      output usage information
",
}
`;

exports[`JSONNI help should be printed with invalid query and show error message 1`] = `
Object {
  "stderr": "
Invalid query

",
  "stdout": "Usage: index [options]

Options:
  -v, --version                   output the version number
  -m --minify                     minify output
  -q --query <query>              query to transform data with
  --input <format>                input format. Available formats: json, tsv, csv
  --input-header <header>         input CSV/TSV headers. Separated with \\",\\"
  --input-delimiter <delimiter>   CSV/TSV input delimiter character. Defaults to \\",\\"
  --output <format>               output format. Available formats: json, tsv, csv
  --output-delimiter <delimiter>  CSV/TSV output delimiter character. Defaults to \\",\\"
  --indent <indent>               output indentation, defaults to \\"  \\"
  -h, --help                      output usage information

",
}
`;

exports[`JSONNI help should be printed with query without input and show error message 1`] = `
Object {
  "stderr": "
Input missing

",
  "stdout": "Usage: index [options]

Options:
  -v, --version                   output the version number
  -m --minify                     minify output
  -q --query <query>              query to transform data with
  --input <format>                input format. Available formats: json, tsv, csv
  --input-header <header>         input CSV/TSV headers. Separated with \\",\\"
  --input-delimiter <delimiter>   CSV/TSV input delimiter character. Defaults to \\",\\"
  --output <format>               output format. Available formats: json, tsv, csv
  --output-delimiter <delimiter>  CSV/TSV output delimiter character. Defaults to \\",\\"
  --indent <indent>               output indentation, defaults to \\"  \\"
  -h, --help                      output usage information

",
}
`;

exports[`JSONNI help should be printed without params 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: index [options]

Options:
  -v, --version                   output the version number
  -m --minify                     minify output
  -q --query <query>              query to transform data with
  --input <format>                input format. Available formats: json, tsv, csv
  --input-header <header>         input CSV/TSV headers. Separated with \\",\\"
  --input-delimiter <delimiter>   CSV/TSV input delimiter character. Defaults to \\",\\"
  --output <format>               output format. Available formats: json, tsv, csv
  --output-delimiter <delimiter>  CSV/TSV output delimiter character. Defaults to \\",\\"
  --indent <indent>               output indentation, defaults to \\"  \\"
  -h, --help                      output usage information

",
}
`;

exports[`JSONNI indent should indent output with --indent 1`] = `
"[
 {
  \\"_id\\": 1,
  \\"isActive\\": false,
  \\"age\\": 30,
  \\"name\\": \\"Meadows Parker\\",
  \\"registered\\": \\"2017-10-03T09:23:04 -03:00\\"
 },
 {
  \\"_id\\": 2,
  \\"isActive\\": true,
  \\"age\\": 30,
  \\"name\\": \\"Mckay Barnett\\",
  \\"registered\\": \\"2017-03-28T04:16:44 -03:00\\"
 },
 {
  \\"_id\\": 3,
  \\"isActive\\": true,
  \\"age\\": 40,
  \\"name\\": \\"Newman Barr\\",
  \\"registered\\": \\"2018-01-05T04:30:58 -02:00\\"
 },
 {
  \\"_id\\": 4,
  \\"isActive\\": true,
  \\"age\\": 39,
  \\"name\\": \\"Nona Mercado\\",
  \\"registered\\": \\"2016-12-27T03:49:11 -02:00\\"
 },
 {
  \\"_id\\": 5,
  \\"isActive\\": false,
  \\"age\\": 25,
  \\"name\\": \\"Hurley Charles\\",
  \\"registered\\": \\"2017-08-18T10:50:52 -03:00\\"
 }
]"
`;

exports[`JSONNI indent should indent output with --indent 2`] = `
"[
		{
				\\"_id\\": 1,
				\\"isActive\\": false,
				\\"age\\": 30,
				\\"name\\": \\"Meadows Parker\\",
				\\"registered\\": \\"2017-10-03T09:23:04 -03:00\\"
		},
		{
				\\"_id\\": 2,
				\\"isActive\\": true,
				\\"age\\": 30,
				\\"name\\": \\"Mckay Barnett\\",
				\\"registered\\": \\"2017-03-28T04:16:44 -03:00\\"
		},
		{
				\\"_id\\": 3,
				\\"isActive\\": true,
				\\"age\\": 40,
				\\"name\\": \\"Newman Barr\\",
				\\"registered\\": \\"2018-01-05T04:30:58 -02:00\\"
		},
		{
				\\"_id\\": 4,
				\\"isActive\\": true,
				\\"age\\": 39,
				\\"name\\": \\"Nona Mercado\\",
				\\"registered\\": \\"2016-12-27T03:49:11 -02:00\\"
		},
		{
				\\"_id\\": 5,
				\\"isActive\\": false,
				\\"age\\": 25,
				\\"name\\": \\"Hurley Charles\\",
				\\"registered\\": \\"2017-08-18T10:50:52 -03:00\\"
		}
]"
`;

exports[`JSONNI minify should minify output with --minify 1`] = `
"{\\"name\\":\\"Meadows Parker\\",\\"age\\":30}
"
`;

exports[`JSONNI minify should minify output with -m 1`] = `
"{\\"name\\":\\"Meadows Parker\\",\\"age\\":30}
"
`;
